# comp_374

./: .gitignore  Dockerfile  Makefile  README.md  Week 2.ipynb  outline.md  pyproject.toml  requirements.txt  upload_notebooks_to_colab.py
.ipynb_checkpoints/: Week 2-checkpoint.ipynb  Week_5-checkpoint.ipynb
assignments/: Homework_10.ipynb  Midterm.ipynb
data/: basic_data.csv  wine_preprocessed.csv
homeworks/: homework_1.ipynb
lecture_notes/: Week10.ipynb  Week_1.ipynb  Week_2.ipynb  Week_3.ipynb  Week_4.ipynb  Week_5.ipynb  Week_6.ipynb  Week_7.ipynb  Week_8.ipynb  Week_9.ipynb
