[tool.poetry]
name = "comp-374"
version = "0.1.0"
description = ""
authors = ["David E. Weirich <weirich.david@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
tensorflow = "^2.18.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
